Opens Dropbox, but crashes when file selected

--- a/Respeak/res/values/strings.xml
+++ b/Respeak/res/values/strings.xml
@@ -6,11 +6,14 @@
     <string name="requestor_name">CGNet Swara</string>
     <string name="max_reward">Max Reward:</string>
     <string name="max_reward_amount">10 rupees</string>
+    <string name="current_recording">Current Recording:</string>
+    <string name="current_recording_selected">No file currently selected</string>
     <string name="image_description">CGNet Swara</string>
     <string name="play">Play</string>
     <string name="choose_file">Choose file from Dropbox</string>
     <string name="pause">Pause</string>
     <string name="listen_again">Listen Again</string>
     <string name="respeak">Respeak</string>
+    <string name="link">Link:</string>
 
 </resources>
