Made layout for submission confirmation

--- a/Respeak/res/values/strings.xml
+++ b/Respeak/res/values/strings.xml
@@ -27,12 +27,18 @@
     <string name="link">Link:</string>
     <string name="your_recording">Your Recording:</string>
     <string name="original_recording">Original Recording:</string>
+    <string name="thank_you">Thank you for your submission!</string>
+    <string name="thank_you_details">All payments will be awarded based on the perecentage accuracy of your speech.</string>
+    <string name="view_payment_scale">View the payment scale.</string>
+    <string name="sms_update">An update of your accuracy and payment status will be sent via SMS within two business days.</string>
+    <string name="do_more_respeaks">Do more respeaks</string>
+    <string name="view_account_balance">View account balance</string>
     <string name="image_description_recorder">Recorder</string>
     <string name="image_description_record_button">Press to record</string>
     <string name="image_description_done_button">Press if you are done recording</string>
     <string name="title_activity_listen">listen</string>
     <string name="title_activity_record">record</string>
-    
+
     <color name="white">#FFFFFF</color>
     <color name="light_blue">#00B8E6</color>
     <color name="gold">#E6B800</color>
@@ -40,5 +46,8 @@
     <color name="light_gray">#C1C1AF</color>
     <color name="red">#E60000</color>
     <color name="green">#53CF29</color>
+
+    <string name="title_activity_submission_confirmation">SubmissionConfirmationActivity</string>
+    <string name="hello_world">Hello world!</string>
 
 </resources>
