Added scrolly text view

--- a/Respeak/res/values/strings.xml
+++ b/Respeak/res/values/strings.xml
@@ -39,7 +39,8 @@
     <string name="title_activity_listen">listen</string>
     <string name="title_activity_record">record</string>
     <string name="title_activity_thank_you">thank you</string>
-
+    <string name="title_activity_training">training</string>
+  
     <color name="white">#FFFFFF</color>
     <color name="light_blue">#00B8E6</color>
     <color name="gold">#E6B800</color>
@@ -47,9 +48,7 @@
     <color name="light_gray">#C1C1AF</color>
     <color name="red">#E60000</color>
     <color name="green">#53CF29</color>
+    
 
-    <string name="title_activity_training">TrainingActivity</string>
-    <string name="hello_world">Hello world!</string>
-    <string name="action_settings">Settings</string>
 
 </resources>
