Added recording and done buttons to training screen

--- a/Respeak/res/values/strings.xml
+++ b/Respeak/res/values/strings.xml
@@ -46,6 +46,7 @@
     <color name="gold">#E6B800</color>
     <color name="dark_gray">#2E2E2B</color>
     <color name="light_gray">#C1C1AF</color>
+    <color name="lighter_gray">#F8F8F8</color>
     <color name="red">#E60000</color>
     <color name="green">#53CF29</color>
     
