--- a/Respeak/res/values/strings.xml
+++ b/Respeak/res/values/strings.xml
@@ -33,6 +33,7 @@
     <string name="sms_update">An update of your accuracy and payment status will be sent via SMS within two business days.</string>
     <string name="do_more_respeaks">Do more respeaks</string>
     <string name="view_account_balance">View account balance</string>
+    <string name="settings">Settings</string>
     <string name="image_description_recorder">Recorder</string>
     <string name="image_description_record_button">Press to record</string>
     <string name="image_description_done_button">Press if you are done recording</string>
