--- a/Respeak/res/values/strings.xml
+++ b/Respeak/res/values/strings.xml
@@ -52,6 +52,7 @@
     <color name="light_gray">#C1C1AF</color>
     <color name="lighter_gray">#F6F6F6</color>
     <color name="red">#E60000</color>
+    <color name="light_red_background">#FFCCB2</color>
     <color name="green">#53CF29</color>
 
     <string name="title_activity_pay_scale">PayScaleActivity</string>
