Changed to less vivid green

--- a/Respeak/res/values/strings.xml
+++ b/Respeak/res/values/strings.xml
@@ -66,6 +66,6 @@
     <color name="red">#E60000</color>
     <color name="light_red_background">#FFCCB2</color>
     <color name="dark_red">#CC0000</color>
-    <color name="green">#CCFF33</color>
+    <color name="green">#99FF33</color>
 
 </resources>
