--- a/Respeak/res/values/strings.xml
+++ b/Respeak/res/values/strings.xml
@@ -56,6 +56,7 @@
     <string name="title_activity_record">record</string>
     <string name="title_activity_thank_you">thank you</string>
     <string name="title_activity_training">training</string>
+    <string name="title_activity_pay_scale">pay scale</string>
 
     <color name="white">#FFFFFF</color>
     <color name="light_blue">#00B8E6</color>
@@ -66,6 +67,6 @@
     <color name="red">#E60000</color>
     <color name="light_red_background">#FFCCB2</color>
     <color name="dark_red">#CC0000</color>
-    <color name="green">#99FF33</color>
+    <color name="green">#CCFF33</color>
 
 </resources>
