Added submit and record again buttons

--- a/Respeak/res/values/strings.xml
+++ b/Respeak/res/values/strings.xml
@@ -24,6 +24,7 @@
     <string name="sounds_good">Sounds good?</string>
     <string name="no_record_again">no, record again</string>
     <string name="yes_submit">yes, submit</string>
+    <string name="record_again">Record Again</string>
     <string name="link">Link:</string>
     <string name="your_recording">Your Recording:</string>
     <string name="original_recording">Original Recording:</string>
@@ -67,6 +68,6 @@
     <color name="red">#E60000</color>
     <color name="light_red_background">#FFCCB2</color>
     <color name="dark_red">#CC0000</color>
-    <color name="green">#CCFF33</color>
+    <color name="green">#66FF33</color>
 
 </resources>
