Fixed missing string resource

--- a/Respeak/res/values/strings.xml
+++ b/Respeak/res/values/strings.xml
@@ -25,6 +25,7 @@
     <string name="no_record_again">no, record again</string>
     <string name="yes_submit">yes, submit</string>
     <string name="record_again">Record Again</string>
+    <string name="submit">Submit</string>
     <string name="link">Link:</string>
     <string name="your_recording">Your Recording:</string>
     <string name="original_recording">Original Recording:</string>
