--- a/Respeak/res/values/strings.xml
+++ b/Respeak/res/values/strings.xml
@@ -50,6 +50,8 @@
     <string name="view_account_balance">View account balance</string>
     <string name="settings">Settings</string>
     <string name="welcome">Welcome!</string>
+    <string name="are_you_sure">Are you sure you are ready to submit?</string>
+    <string name ="training_dialog_submission">Once you submit, you cannot perform training again.</string>
     <string name="training_dialog">Let\'s start training respeak to understand your voice. Please record yourself reading the following passage outloud as clearly as possible.</string>
     <string name="image_description_recorder">Recorder</string>
     <string name="image_description_record_button">Press to record</string>
