Updated layout for account balance

--- a/Respeak/res/values/strings.xml
+++ b/Respeak/res/values/strings.xml
@@ -53,6 +53,13 @@
     <string name="are_you_sure">Are you sure you are ready to submit?</string>
     <string name ="training_dialog_submission">Once you submit, you cannot perform training again.</string>
     <string name="training_dialog">Let\'s start training Respeak to understand your voice. Please record yourself reading the following passage out loud. \n\nBe sure to read the entire passage and speak as naturally as possible. This task will take approximately 10 minutes.</string>
+	<string name="balance_and_history">balance and history</string>
+	<string name="last_earning">Earnings since last top-up:</string>
+	<string name="last_earning_amount">\u20B90</string>
+	<string name="next_earning">Amount needed till next top-up:</string>
+	<string name="next_earning_amount">\u20B90</string>
+	<string name="total_earning">Total earnings received:</string>
+	<string name="total_earning_amount">\u20B90</string>
     <string name="image_description_recorder">Recorder</string>
     <string name="image_description_record_button">Press to record</string>
     <string name="image_description_done_button">Press if you are done recording</string>
