Revised layout for account history page

--- a/Respeak/res/values/strings.xml
+++ b/Respeak/res/values/strings.xml
@@ -60,6 +60,7 @@
 	<string name="next_earning_amount">\u20B90</string>
 	<string name="total_earning">Total earnings received:</string>
 	<string name="total_earning_amount">\u20B90</string>
+	<string name="top_ups_will_be_awarded">*Top-ups will be awarded after every \u20B9100 earned</string>
     <string name="image_description_recorder">Recorder</string>
     <string name="image_description_record_button">Press to record</string>
     <string name="image_description_done_button">Press if you are done recording</string>
