--- a/Respeak/res/values/strings.xml
+++ b/Respeak/res/values/strings.xml
@@ -51,6 +51,7 @@
     <string name="do_more_respeaks">Do more respeaks</string>
     <string name="view_account_balance">View account balance</string>
     <string name="settings">Settings</string>
+    <string name="account_history">Account History</string>
     <string name="welcome">Welcome!</string>
     <string name="are_you_sure">Are you sure you are ready to submit?</string>
     <string name="training_dialog_submission">Once you submit, you cannot perform training again.</string>
