--- a/Respeak/res/values/strings.xml
+++ b/Respeak/res/values/strings.xml
@@ -52,7 +52,7 @@
     <string name="do_more_respeaks">Do more respeaks</string>
     <string name="view_account_balance">View account balance</string>
     <string name="settings">Settings</string>
-    <string name="account_history">Account History</string>
+    <string name="account_history">account history</string>
     <string name="welcome">Welcome!</string>
     <string name="are_you_sure">Are you sure you are ready to submit?</string>
     <string name="training_dialog_submission">Once you submit, you cannot perform training again.</string>
@@ -68,8 +68,6 @@
     <string name="pref_user_settings">User Settings</string>
     <string name="pref_phone_number">Phone Number</string>
     <string name="pref_phone_number_summ">Enter your phone number</string>
-    <string name="pref_full_name">Full Name</string>
-    <string name="pref_full_name_summ">Enter your name</string>
     <string name="pref_about">About</string>
     <string name="pref_version_num">Version</string>
     <string name="pref_version_num_summ">1.0.0</string>
